// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Template snapshots > express preset renders match snapshot > express 1`] = `
{
  "AGENTS.md.hbs": "# AI Agent Guidelines — my-express-app
*Generated 2025-01-01 — v1.0.0-test*
Welcome! This document provides guidelines, conventions, and instruction workflows for AI coding assistants (like Cursor, Claude, Gemini, or Copilot) operating on the **my-express-app** codebase.

---

## 🚀 Tech Stack Profile

This project uses the following technical stack configuration:
- **Frontend Framework**: \`None\`
- **Backend Framework**: \`Express\`
- **Database**: \`PostgreSQL\`
- **Authentication**: \`Custom\`
- **State Management**: \`None\`
- **Testing Framework**: \`Jest\`
- **Package Manager**: \`npm\`

---

## 🛠️ Command Reference

Use these commands for development, linting, formatting, and testing. Do **NOT** use alternate commands unless requested.

| Action | Command |
| :--- | :--- |
| **Install Dependencies** | \`npm install\` |
| **Run Dev Server** | \`npm run dev\` |
| **Build Project** | \`npm run build\` |
| **Lint Code** | \`npm run lint\` |
| **Format Code** | \`npm run format\` |
| **Run Tests** | \`npm run test\` |

---

## 📝 Rules of Engagement

> [!IMPORTANT]
> ### 1. Code Style & Architecture
> - Respect the existing directory structure defined in [CODEBASE_MAP.md](CODEBASE_MAP.md).
> - Keep files modular and focused. Avoid giant multi-hundred line files.
> - Do not write generic or boilerplate comments (e.g., \`// This function adds two numbers\`). Write comments only for non-obvious business logic or architectural decisions.
>
> ### 2. Dependency Management
> - Always install dependencies using **\`npm\`**. Never use another package manager.
> - Do not add dependencies without assessing their impact on bundle size or security.
>
> ### 3. Errors and Safety
> - Handle all error paths explicitly. Do not use generic catch-alls (\`catch (e) {}\`) without logging or handling.
> - Ensure all user input is sanitized and validated. Refer to the standards in [API_CONTRACTS.md](API_CONTRACTS.md).

---

## 🧑‍💻 Task Execution Workflow

Before implementing changes, verify against this workflow:

\`\`\`mermaid
graph TD
    A[Read Requirements] --> B[Analyze Codebase Map]
    B --> C[Create Detailed Plan]
    C --> D[Write Code & Tests]
    D --> E[Run Lint & Format]
    E --> F[Run Test Suite]
    F --> G[Submit PR]
\`\`\`

1. **Understand Context**: Read [ARCHITECTURE.md](ARCHITECTURE.md) and [BUSINESS_RULES.md](BUSINESS_RULES.md).
2. **Implement**: Write cleaner, self-documenting code.
3. **Verify**: Ensure that \`npm run lint\` and all tests pass with zero warnings.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "API_CONTRACTS.md.hbs": "# API Contracts — my-express-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the communication contracts, response models, and conventions for interacting with the **my-express-app** backends.

---

## 🌐 Endpoint Protocols

- **Base URL (Local)**: \`http://localhost:3000\`
- **Format**: All payloads must be structured as \`application/json\`.
- **Headers**:
  - \`Content-Type: application/json\`
  - \`Authorization: Bearer <TOKEN>\` (For authenticated requests)

---

## 🔒 Error Payload Structure

All API error responses must adhere to the following payload contract:

\`\`\`json
{
  "success": false,
  "error": {
    "code": "ERROR_CODE_STRING",
    "message": "Human readable error explanation.",
    "details": {}
  }
}
\`\`\`

---

### Express REST Endpoint Patterns
- **Route Structure**: Organize routes by domain (\`/api/users\`, \`/api/posts\`, \`/api/auth\`).
- **Middleware**: Apply authentication, validation, and rate-limiting middleware per route group.
- **Error Handling**: Use a centralized Express error-handling middleware to return consistent \`{ success, error }\` payloads.
- **Validation**: Use Zod or Joi schemas to validate request bodies before they reach route handlers.

## 📝 Integration Guidelines

> [!NOTE]
> ### 1. Client Requests
> All client operations should wrap API fetches in try/catch handlers, mapping raw errors to user-friendly messages.
>
> ### 2. Cors Policies
> Allow origins must be restricted to standard local hosts during development, and explicit production domains on deployment.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "ARCHITECTURE.md.hbs": "# Architecture Blueprint — my-express-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the high-level architecture, data flows, and design decisions for the **my-express-app** project.

---

## 🏛️ System Overview

The system is configured as follows:
- **Frontend Layer**: \`None\`
- **Backend / Integration Layer**: \`Express\`
- **Database Layer**: \`PostgreSQL\`
- **Authentication**: \`Custom\`

---

## 🗺️ System Topology

Here is the flow of user actions and data updates:

\`\`\`mermaid
graph TD
  User([User Browser]) -->|UI Interaction| ClientApp[None App]
    ClientApp -->|Authenticate| AuthProvider[Custom]
  ClientApp -->|API Calls (JSON/HTTP)| APIBackend[Express Server]
    APIBackend -->|Query/Mutation| Database[(PostgreSQL Database)]
\`\`\`

---

## 🧱 Layered Architecture

### 1. Presentation Layer (Frontend)
- Built using **\`None\`**.
- State management handled by **\`None\`**.
- Handles client-side routing, user input capture, layout rendering, and local state sync.

### 2. Integration & Backend Layer
- Powered by a **\`Express\`** API server.
- Responsible for executing business operations, validating input, checking security contracts, and querying the database.

### 3. Data & Storage Layer
- Powered by **\`PostgreSQL\`**.
- Interfaced using custom query helpers or ORMs suited for \`PostgreSQL\`.

---

## 🔒 Security & Data Guardrails

> [!IMPORTANT]
> - **Authentication**: Managed via \`Custom\`.
> - **Input Validation**: All data entering the backend boundary or Firestore database must be validated using runtime validation libraries (e.g., Zod, Valibot, or Joi) on both client and backend.
> - **Cors & Headers**: API requests must strictly adhere to the rules outlined in [API_CONTRACTS.md](API_CONTRACTS.md).


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "BUSINESS_RULES.md.hbs": "# Business Rules — my-express-app
*Generated 2025-01-01 — v1.0.0-test*
This document serves as the single source of truth for the core domain rules, validations, and constraints governing the **my-express-app** codebase. AI agents and developers must consult this document before modifying core domain logic.

---

## 🎯 Domain Principles

- **Separation of Concerns**: Domain logic must reside in dedicated services, not inside UI views or router handlers.
- **Fail Fast**: Validate inputs at the outermost boundaries (e.g. APIs or database schemas) using type-safe validation contracts.

---

## 📋 Core Business Rules

This table outlines key business rules, their constraints, and where they are enforced.

| Feature Area | Rule Description | Enforced In |
| :--- | :--- | :--- |
| **Authentication** | Users must have a validated email to access user profiles. | Auth Guard / Security Rules |
| **Data Retention** | User profiles must not expose critical PII in logs. | logger helper / API serializing |
| **Integrations** | All write actions must trigger audit logs. | Hooks / Middleware |

---

## 🛡️ Validation & Invariants

> [!WARNING]
> Ensure all input validations strictly enforce:
> - **String Lengths**: Clean inputs of excessive whitespace.
> - **Input Types**: Require strict formats for emails, URLs, and timestamps.
> - **Database Operations**: Verify query constraints to avoid writing incomplete database documents.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "CODEBASE_MAP.md.hbs": "# Codebase Map — my-express-app
*Generated 2025-01-01 — v1.0.0-test*
This directory structure outlines where folders and files reside and details their primary purpose. Keep it updated as directories are added or refactored.

---

## 📂 Directory Layout

\`\`\`txt
my-express-app/
├── docs/                      # AI-ready documentation (this folder)
├── src/                       # Main source directory
│   ├── controllers/           # Route handler controllers
│   ├── middleware/            # Express request middleware
│   ├── routes/                # Endpoint routing definitions
│   ├── services/              # Business operations logic
│   └── app.ts                 # Express entry point
├── tests/                     # Test suite specs (Jest)
├── package.json               # Package setup and dependencies
└── tsconfig.json              # TypeScript compilation rules
\`\`\`

---

## 🔍 Folder Contexts

### \`docs/\`
Contains architectural documents, glossary terms, and instructions for developers and AI agents. Keep files up to date when changing APIs or rules.


### Service Boundary
Ensure backend/server logic is isolated from frontend components. Backend queries, database connections, and private API keys should only be invoked within server environments.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "GLOSSARY.md.hbs": "# Glossary — my-express-app
*Generated 2025-01-01 — v1.0.0-test*
A reference glossary containing business domain terms, engineering concepts, and common acronyms used within the **my-express-app** codebase.

---

## 🏛️ Business Domain Terms

### [Term Name]
- **Definition**: What this term represents in context of the application's business requirements.
- **Related Terms**: Core links to other domain terms.

---

## 🛠️ Technical Concepts

### ESM (ES Modules)
- **Definition**: ECMAScript Modules, the standard layout format for packaging JavaScript code for reuse.

### PII (Personally Identifiable Information)
- **Definition**: Any data that could potentially identify a specific individual. Guarded carefully as noted in [BUSINESS_RULES.md](BUSINESS_RULES.md).

---

## 🔍 Common Abbreviations

| Abbreviation | Expanded Form | Context |
| :--- | :--- | :--- |
| **Auth** | Authentication / Authorization | User access layers |
| **E2E** | End-to-End | Testing pipeline |
| **SDK** | Software Development Kit | Tooling libraries |


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "REFACTOR_RULES.md.hbs": "# Refactoring & Code Quality — my-express-app
*Generated 2025-01-01 — v1.0.0-test*
This guide sets quality rules for clean coding, codebase maintenance, and deprecation protocols in the **my-express-app** repository.

---

## 📐 Quality Standards

- **Single Responsibility Principle**: A file should do one thing. If a component grows past 200 lines, extract helper functions or subcomponents.
- **Strict Typing**: Avoid \`any\` declarations. Use detailed interface structures or utility types.

---

## 🛠️ Refactoring Trigger Checklist

Refactor modules when you encounter these code smells:

| Smell | Detection Criteria | Remedy |
| :--- | :--- | :--- |
| **Deep Nesting** | If statement nesting goes past 3 levels. | Guard clauses / early returns. |
| **Duplicate Logic** | Similar logic exists in 3 or more files. | Extract to custom hooks or helper modules. |
| **Fragile Functions** | Functions requiring multiple parameter adjustments. | Object parameters / option config payloads. |

---

## ⚠️ Deprecation Protocol

> [!CAUTION]
> Avoid making breaking changes directly on active branches:
> 1. **Mark as Deprecated**: Use JSDoc \`@deprecated\` tag to flag methods.
> 2. **Add Warn logs**: Output runtime console warnings when invoked in development.
> 3. **Schedule Removal**: Set a future milestone version to purge obsolete methods.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "UI_PATTERNS.md.hbs": "# UI Patterns & Styling Conventions — my-express-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the interface standards, component rules, design system choices, and styling conventions for **my-express-app**.

---

## 🎨 Theme & Palette System

We target a premium visual identity:
- **Default**: Slate/Zinc scale with primary indigo accents.
- **Color Format**: Use HSL color declarations to simplify opacity adjustments and variations:
  - \`--primary\`: \`hsl(240, 5.9%, 10%)\`
  - \`--accent\`: \`hsl(263.4, 70%, 50.4%)\`
  - \`--background\`: \`hsl(0, 0%, 100%)\`

---

## 🧱 Component Layout Rules

- **Design Philosophy**: Use responsive, mobile-first design approaches.
- **Interactive States**: Every clickable component MUST have styling for:
  - \`:hover\` — slight scale-up (e.g. \`scale-102\`) or opacity adjustment.
  - \`:focus-visible\` — clean focus rings for accessibility.
  - \`:disabled\` — grayed out options, and \`cursor: not-allowed\`.

---

## 🌟 Modern Design Features

> [!TIP]
> ### Glassmorphism & Backdrop Filters
> Use modern CSS to build premium panel containers:
> \`\`\`css
> .glass-panel {
>   background: rgba(255, 255, 255, 0.7);
>   backdrop-filter: blur(10px);
>   border: 1px solid rgba(255, 255, 255, 0.2);
> }
> \`\`\`
>
> ### Accessibility Checklist
> - Ensure all images have descriptive \`alt\` tags.
> - Contrast ratios should adhere to WCAG AA standards (minimum 4.5:1 for standard text).


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
}
`;

exports[`Template snapshots > firebase preset renders match snapshot > firebase 1`] = `
{
  "AGENTS.md.hbs": "# AI Agent Guidelines — my-firebase-app
*Generated 2025-01-01 — v1.0.0-test*
Welcome! This document provides guidelines, conventions, and instruction workflows for AI coding assistants (like Cursor, Claude, Gemini, or Copilot) operating on the **my-firebase-app** codebase.

---

## 🚀 Tech Stack Profile

This project uses the following technical stack configuration:
- **Frontend Framework**: \`None\`
- **Backend Framework**: \`Firebase\`
- **Database**: \`Firestore\`
- **Authentication**: \`Firebase Auth\`
- **State Management**: \`None\`
- **Testing Framework**: \`Jest\`
- **Package Manager**: \`npm\`

---

## 🛠️ Command Reference

Use these commands for development, linting, formatting, and testing. Do **NOT** use alternate commands unless requested.

| Action | Command |
| :--- | :--- |
| **Install Dependencies** | \`npm install\` |
| **Run Dev Server** | \`npm run dev\` |
| **Build Project** | \`npm run build\` |
| **Lint Code** | \`npm run lint\` |
| **Format Code** | \`npm run format\` |
| **Run Tests** | \`npm run test\` |

---

## 📝 Rules of Engagement

> [!IMPORTANT]
> ### 1. Code Style & Architecture
> - Respect the existing directory structure defined in [CODEBASE_MAP.md](CODEBASE_MAP.md).
> - Keep files modular and focused. Avoid giant multi-hundred line files.
> - Do not write generic or boilerplate comments (e.g., \`// This function adds two numbers\`). Write comments only for non-obvious business logic or architectural decisions.
>
> ### 2. Dependency Management
> - Always install dependencies using **\`npm\`**. Never use another package manager.
> - Do not add dependencies without assessing their impact on bundle size or security.
>
> ### 3. Errors and Safety
> - Handle all error paths explicitly. Do not use generic catch-alls (\`catch (e) {}\`) without logging or handling.
> - Ensure all user input is sanitized and validated. Refer to the standards in [API_CONTRACTS.md](API_CONTRACTS.md).

---

## 🔥 Firebase-Specific Guidelines

> [!WARNING]
> ### 1. Firestore Security Rules
> - Never write client-side code that bypasses security rules.
> - Validate all writes with \`request.auth\` and \`request.resource.data\` in security rules.
> - Use \`onCall\` functions for sensitive operations instead of direct client SDK access.
>
> ### 2. Firebase Admin SDK
> - Admin SDK operations should only run in trusted server environments (Cloud Functions, your backend server).
> - Never expose Admin SDK credentials to the client.
>
> ### 3. Firestore Data Modeling
> - Avoid deeply nested collections (max 2-3 levels).
> - Use composite indexes for complex queries — they must be created before querying at scale.

---

## 🧑‍💻 Task Execution Workflow

Before implementing changes, verify against this workflow:

\`\`\`mermaid
graph TD
    A[Read Requirements] --> B[Analyze Codebase Map]
    B --> C[Create Detailed Plan]
    C --> D[Write Code & Tests]
    D --> E[Run Lint & Format]
    E --> F[Run Test Suite]
    F --> G[Submit PR]
\`\`\`

1. **Understand Context**: Read [ARCHITECTURE.md](ARCHITECTURE.md) and [BUSINESS_RULES.md](BUSINESS_RULES.md).
2. **Implement**: Write cleaner, self-documenting code.
3. **Verify**: Ensure that \`npm run lint\` and all tests pass with zero warnings.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "API_CONTRACTS.md.hbs": "# API Contracts — my-firebase-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the communication contracts, response models, and conventions for interacting with the **my-firebase-app** backends.

---

## 🌐 Endpoint Protocols

- **Base URL (Local)**: \`http://localhost:5001\`
- **Format**: All payloads must be structured as \`application/json\`.
- **Headers**:
  - \`Content-Type: application/json\`
  - \`Authorization: Bearer <TOKEN>\` (For authenticated requests)

---

## 🔒 Error Payload Structure

All API error responses must adhere to the following payload contract:

\`\`\`json
{
  "success": false,
  "error": {
    "code": "ERROR_CODE_STRING",
    "message": "Human readable error explanation.",
    "details": {}
  }
}
\`\`\`

---

### Firebase Integration Patterns
- **Callable Functions**: Use \`onCall\` for authenticated client-server interactions.
- **Firestore Rules**: Enforce data access control at the document level using security rules.
- **Batch Operations**: Use batched writes for atomic multi-document updates.

## 📝 Integration Guidelines

> [!NOTE]
> ### 1. Client Requests
> All client operations should wrap API fetches in try/catch handlers, mapping raw errors to user-friendly messages.
>
> ### 2. Cors Policies
> Allow origins must be restricted to standard local hosts during development, and explicit production domains on deployment.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "ARCHITECTURE.md.hbs": "# Architecture Blueprint — my-firebase-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the high-level architecture, data flows, and design decisions for the **my-firebase-app** project.

---

## 🏛️ System Overview

The system is configured as follows:
- **Frontend Layer**: \`None\`
- **Backend / Integration Layer**: \`Firebase\`
- **Database Layer**: \`Firestore\`
- **Authentication**: \`Firebase Auth\`

---

## 🗺️ System Topology

Here is the flow of user actions and data updates:

\`\`\`mermaid
graph TD
  User([User Browser]) -->|UI Interaction| ClientApp[None App]
  ClientApp -->|Firebase SDK / Auth| AuthProvider[Firebase Authentication]
  ClientApp -->|Firebase SDK / Firestore| Database[(Cloud Firestore)]
\`\`\`

---

## 🧱 Layered Architecture

### 1. Presentation Layer (Frontend)
- Built using **\`None\`**.
- State management handled by **\`None\`**.
- Handles client-side routing, user input capture, layout rendering, and local state sync.

### 2. Integration & Backend Layer
- Utilizes a serverless integration pattern using the **Firebase SDK**.
- Security rules are set up at the Firestore/Storage levels to authorize client requests without a separate API server.

### 3. Data & Storage Layer
- Powered by **Cloud Firestore**, a NoSQL document database.
- Key collections are structured around core domain aggregates (see [BUSINESS_RULES.md](BUSINESS_RULES.md)).

---

## 🔒 Security & Data Guardrails

> [!IMPORTANT]
> - **Authentication**: Managed via \`Firebase Auth\`.
> - **Input Validation**: All data entering the backend boundary or Firestore database must be validated using runtime validation libraries (e.g., Zod, Valibot, or Joi) on both client and backend.
> - **Cors & Headers**: API requests must strictly adhere to the rules outlined in [API_CONTRACTS.md](API_CONTRACTS.md).


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "BUSINESS_RULES.md.hbs": "# Business Rules — my-firebase-app
*Generated 2025-01-01 — v1.0.0-test*
This document serves as the single source of truth for the core domain rules, validations, and constraints governing the **my-firebase-app** codebase. AI agents and developers must consult this document before modifying core domain logic.

---

## 🎯 Domain Principles

- **Separation of Concerns**: Domain logic must reside in dedicated services, not inside UI views or router handlers.
- **Fail Fast**: Validate inputs at the outermost boundaries (e.g. APIs or database schemas) using type-safe validation contracts.

---

## 📋 Core Business Rules

This table outlines key business rules, their constraints, and where they are enforced.

| Feature Area | Rule Description | Enforced In |
| :--- | :--- | :--- |
| **Authentication** | Users must have a validated email to access user profiles. | Auth Guard / Security Rules |
| **Data Retention** | User profiles must not expose critical PII in logs. | logger helper / API serializing |
| **Integrations** | All write actions must trigger audit logs. | Hooks / Middleware |

---

## 🛡️ Validation & Invariants

> [!WARNING]
> Ensure all input validations strictly enforce:
> - **String Lengths**: Clean inputs of excessive whitespace.
> - **Input Types**: Require strict formats for emails, URLs, and timestamps.
> - **Database Operations**: Verify query constraints to avoid writing incomplete database documents.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "CODEBASE_MAP.md.hbs": "# Codebase Map — my-firebase-app
*Generated 2025-01-01 — v1.0.0-test*
This directory structure outlines where folders and files reside and details their primary purpose. Keep it updated as directories are added or refactored.

---

## 📂 Directory Layout

\`\`\`txt
my-firebase-app/
├── docs/                      # AI-ready documentation (this folder)
├── src/                       # Main source directory
├── tests/                     # Test suite specs (Jest)
├── package.json               # Package setup and dependencies
└── tsconfig.json              # TypeScript compilation rules
\`\`\`

---

## 🔍 Folder Contexts

### \`docs/\`
Contains architectural documents, glossary terms, and instructions for developers and AI agents. Keep files up to date when changing APIs or rules.


### Service Boundary
Ensure backend/server logic is isolated from frontend components. Backend queries, database connections, and private API keys should only be invoked within server environments.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "GLOSSARY.md.hbs": "# Glossary — my-firebase-app
*Generated 2025-01-01 — v1.0.0-test*
A reference glossary containing business domain terms, engineering concepts, and common acronyms used within the **my-firebase-app** codebase.

---

## 🏛️ Business Domain Terms

### [Term Name]
- **Definition**: What this term represents in context of the application's business requirements.
- **Related Terms**: Core links to other domain terms.

---

## 🛠️ Technical Concepts

### ESM (ES Modules)
- **Definition**: ECMAScript Modules, the standard layout format for packaging JavaScript code for reuse.

### PII (Personally Identifiable Information)
- **Definition**: Any data that could potentially identify a specific individual. Guarded carefully as noted in [BUSINESS_RULES.md](BUSINESS_RULES.md).

---

## 🔍 Common Abbreviations

| Abbreviation | Expanded Form | Context |
| :--- | :--- | :--- |
| **Auth** | Authentication / Authorization | User access layers |
| **E2E** | End-to-End | Testing pipeline |
| **SDK** | Software Development Kit | Tooling libraries |


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "REFACTOR_RULES.md.hbs": "# Refactoring & Code Quality — my-firebase-app
*Generated 2025-01-01 — v1.0.0-test*
This guide sets quality rules for clean coding, codebase maintenance, and deprecation protocols in the **my-firebase-app** repository.

---

## 📐 Quality Standards

- **Single Responsibility Principle**: A file should do one thing. If a component grows past 200 lines, extract helper functions or subcomponents.
- **Strict Typing**: Avoid \`any\` declarations. Use detailed interface structures or utility types.

---

## 🛠️ Refactoring Trigger Checklist

Refactor modules when you encounter these code smells:

| Smell | Detection Criteria | Remedy |
| :--- | :--- | :--- |
| **Deep Nesting** | If statement nesting goes past 3 levels. | Guard clauses / early returns. |
| **Duplicate Logic** | Similar logic exists in 3 or more files. | Extract to custom hooks or helper modules. |
| **Fragile Functions** | Functions requiring multiple parameter adjustments. | Object parameters / option config payloads. |

---

## ⚠️ Deprecation Protocol

> [!CAUTION]
> Avoid making breaking changes directly on active branches:
> 1. **Mark as Deprecated**: Use JSDoc \`@deprecated\` tag to flag methods.
> 2. **Add Warn logs**: Output runtime console warnings when invoked in development.
> 3. **Schedule Removal**: Set a future milestone version to purge obsolete methods.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "UI_PATTERNS.md.hbs": "# UI Patterns & Styling Conventions — my-firebase-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the interface standards, component rules, design system choices, and styling conventions for **my-firebase-app**.

---

## 🎨 Theme & Palette System

We target a premium visual identity:
- **Default**: Slate/Zinc scale with primary indigo accents.
- **Color Format**: Use HSL color declarations to simplify opacity adjustments and variations:
  - \`--primary\`: \`hsl(240, 5.9%, 10%)\`
  - \`--accent\`: \`hsl(263.4, 70%, 50.4%)\`
  - \`--background\`: \`hsl(0, 0%, 100%)\`

---

## 🧱 Component Layout Rules

- **Design Philosophy**: Use responsive, mobile-first design approaches.
- **Interactive States**: Every clickable component MUST have styling for:
  - \`:hover\` — slight scale-up (e.g. \`scale-102\`) or opacity adjustment.
  - \`:focus-visible\` — clean focus rings for accessibility.
  - \`:disabled\` — grayed out options, and \`cursor: not-allowed\`.

---

## 🌟 Modern Design Features

> [!TIP]
> ### Glassmorphism & Backdrop Filters
> Use modern CSS to build premium panel containers:
> \`\`\`css
> .glass-panel {
>   background: rgba(255, 255, 255, 0.7);
>   backdrop-filter: blur(10px);
>   border: 1px solid rgba(255, 255, 255, 0.2);
> }
> \`\`\`
>
> ### Accessibility Checklist
> - Ensure all images have descriptive \`alt\` tags.
> - Contrast ratios should adhere to WCAG AA standards (minimum 4.5:1 for standard text).


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
}
`;

exports[`Template snapshots > nextjs preset renders match snapshot > nextjs 1`] = `
{
  "AGENTS.md.hbs": "# AI Agent Guidelines — my-nextjs-app
*Generated 2025-01-01 — v1.0.0-test*
Welcome! This document provides guidelines, conventions, and instruction workflows for AI coding assistants (like Cursor, Claude, Gemini, or Copilot) operating on the **my-nextjs-app** codebase.

---

## 🚀 Tech Stack Profile

This project uses the following technical stack configuration:
- **Frontend Framework**: \`Next.js\`
- **Backend Framework**: \`None\`
- **Database**: \`None\`
- **Authentication**: \`NextAuth\`
- **State Management**: \`Redux\`
- **Testing Framework**: \`Jest\`
- **Package Manager**: \`npm\`

---

## 🛠️ Command Reference

Use these commands for development, linting, formatting, and testing. Do **NOT** use alternate commands unless requested.

| Action | Command |
| :--- | :--- |
| **Install Dependencies** | \`npm install\` |
| **Run Dev Server** | \`npm run dev\` |
| **Build Project** | \`npm run build\` |
| **Lint Code** | \`npm run lint\` |
| **Format Code** | \`npm run format\` |
| **Run Tests** | \`npm run test\` |

---

## 📝 Rules of Engagement

> [!IMPORTANT]
> ### 1. Code Style & Architecture
> - Respect the existing directory structure defined in [CODEBASE_MAP.md](CODEBASE_MAP.md).
> - Keep files modular and focused. Avoid giant multi-hundred line files.
> - Do not write generic or boilerplate comments (e.g., \`// This function adds two numbers\`). Write comments only for non-obvious business logic or architectural decisions.
>
> ### 2. Dependency Management
> - Always install dependencies using **\`npm\`**. Never use another package manager.
> - Do not add dependencies without assessing their impact on bundle size or security.
>
> ### 3. Errors and Safety
> - Handle all error paths explicitly. Do not use generic catch-alls (\`catch (e) {}\`) without logging or handling.
> - Ensure all user input is sanitized and validated. Refer to the standards in [API_CONTRACTS.md](API_CONTRACTS.md).

---

## 🧑‍💻 Task Execution Workflow

Before implementing changes, verify against this workflow:

\`\`\`mermaid
graph TD
    A[Read Requirements] --> B[Analyze Codebase Map]
    B --> C[Create Detailed Plan]
    C --> D[Write Code & Tests]
    D --> E[Run Lint & Format]
    E --> F[Run Test Suite]
    F --> G[Submit PR]
\`\`\`

1. **Understand Context**: Read [ARCHITECTURE.md](ARCHITECTURE.md) and [BUSINESS_RULES.md](BUSINESS_RULES.md).
2. **Implement**: Write cleaner, self-documenting code.
3. **Verify**: Ensure that \`npm run lint\` and all tests pass with zero warnings.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "API_CONTRACTS.md.hbs": "# API Contracts — my-nextjs-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the communication contracts, response models, and conventions for interacting with the **my-nextjs-app** backends.

---

## 🌐 Endpoint Protocols

- **Base URL (Local)**: \`http://localhost:3000\`
- **Format**: All payloads must be structured as \`application/json\`.
- **Headers**:
  - \`Content-Type: application/json\`
  - \`Authorization: Bearer <TOKEN>\` (For authenticated requests)

---

## 🔒 Error Payload Structure

All API error responses must adhere to the following payload contract:

\`\`\`json
{
  "success": false,
  "error": {
    "code": "ERROR_CODE_STRING",
    "message": "Human readable error explanation.",
    "details": {}
  }
}
\`\`\`

---

## 📝 Integration Guidelines

> [!NOTE]
> ### 1. Client Requests
> All client operations should wrap API fetches in try/catch handlers, mapping raw errors to user-friendly messages.
>
> ### 2. Cors Policies
> Allow origins must be restricted to standard local hosts during development, and explicit production domains on deployment.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "ARCHITECTURE.md.hbs": "# Architecture Blueprint — my-nextjs-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the high-level architecture, data flows, and design decisions for the **my-nextjs-app** project.

---

## 🏛️ System Overview

The system is configured as follows:
- **Frontend Layer**: \`Next.js\`
- **Backend / Integration Layer**: \`None\`
- **Database Layer**: \`None\`
- **Authentication**: \`NextAuth\`

---

## 🗺️ System Topology

Here is the flow of user actions and data updates:

\`\`\`mermaid
graph TD
  User([User Browser]) -->|UI Interaction| ClientApp[Next.js App]
    ClientApp -->|Authenticate| AuthProvider[NextAuth]
  ClientApp -->|API Calls (JSON/HTTP)| APIBackend[None Server]
\`\`\`

---

## 🧱 Layered Architecture

### 1. Presentation Layer (Frontend)
- Built using **\`Next.js\`**.
- State management handled by **\`Redux\`**.
- Handles client-side routing, user input capture, layout rendering, and local state sync.

### 2. Integration & Backend Layer
- Powered by a **\`None\`** API server.
- Responsible for executing business operations, validating input, checking security contracts, and querying the database.

### 3. Data & Storage Layer
- No persistent local or cloud database configured for this stack.

---

### Next.js App Router Architecture
- **Routing**: Uses the App Router (\`app/\`) with file-based routing conventions.
- **Server Components**: Default to React Server Components for data fetching and rendering.
- **Client Components**: Mark interactive components with the \`'use client'\` directive.
- **Layouts**: Shared layouts in \`app/layout.tsx\` wrap nested route segments.
- **Data Fetching**: Use \`fetch\` with caching directives or server-side data access patterns.

---

## 🔒 Security & Data Guardrails

> [!IMPORTANT]
> - **Authentication**: Managed via \`NextAuth\`.
> - **Input Validation**: All data entering the backend boundary or Firestore database must be validated using runtime validation libraries (e.g., Zod, Valibot, or Joi) on both client and backend.
> - **Cors & Headers**: API requests must strictly adhere to the rules outlined in [API_CONTRACTS.md](API_CONTRACTS.md).


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "BUSINESS_RULES.md.hbs": "# Business Rules — my-nextjs-app
*Generated 2025-01-01 — v1.0.0-test*
This document serves as the single source of truth for the core domain rules, validations, and constraints governing the **my-nextjs-app** codebase. AI agents and developers must consult this document before modifying core domain logic.

---

## 🎯 Domain Principles

- **Separation of Concerns**: Domain logic must reside in dedicated services, not inside UI views or router handlers.
- **Fail Fast**: Validate inputs at the outermost boundaries (e.g. APIs or database schemas) using type-safe validation contracts.

---

## 📋 Core Business Rules

This table outlines key business rules, their constraints, and where they are enforced.

| Feature Area | Rule Description | Enforced In |
| :--- | :--- | :--- |
| **Authentication** | Users must have a validated email to access user profiles. | Auth Guard / Security Rules |
| **Data Retention** | User profiles must not expose critical PII in logs. | logger helper / API serializing |
| **Integrations** | All write actions must trigger audit logs. | Hooks / Middleware |

---

## 🛡️ Validation & Invariants

> [!WARNING]
> Ensure all input validations strictly enforce:
> - **String Lengths**: Clean inputs of excessive whitespace.
> - **Input Types**: Require strict formats for emails, URLs, and timestamps.
> - **Database Operations**: Verify query constraints to avoid writing incomplete database documents.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "CODEBASE_MAP.md.hbs": "# Codebase Map — my-nextjs-app
*Generated 2025-01-01 — v1.0.0-test*
This directory structure outlines where folders and files reside and details their primary purpose. Keep it updated as directories are added or refactored.

---

## 📂 Directory Layout

\`\`\`txt
my-nextjs-app/
├── docs/                      # AI-ready documentation (this folder)
├── src/
│   ├── app/                   # Next.js App Router (pages, layouts, route handlers)
│   ├── components/            # Reusable UI component library (atoms, molecules)
│   ├── hooks/                 # Custom React hooks
│   ├── lib/                   # Config configurations (database clients, auth SDKs)
│   └── types/                 # Custom type declarations
├── tests/                     # Test suite specs (Jest)
├── package.json               # Package setup and dependencies
└── tsconfig.json              # TypeScript compilation rules
\`\`\`

---

## 🔍 Folder Contexts

### \`docs/\`
Contains architectural documents, glossary terms, and instructions for developers and AI agents. Keep files up to date when changing APIs or rules.

### \`src/components/\`
Every component should be self-contained in a folder, containing the markup, layout styling, and standard documentation (e.g. \`components/Button/Button.tsx\`).



---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "GLOSSARY.md.hbs": "# Glossary — my-nextjs-app
*Generated 2025-01-01 — v1.0.0-test*
A reference glossary containing business domain terms, engineering concepts, and common acronyms used within the **my-nextjs-app** codebase.

---

## 🏛️ Business Domain Terms

### [Term Name]
- **Definition**: What this term represents in context of the application's business requirements.
- **Related Terms**: Core links to other domain terms.

---

## 🛠️ Technical Concepts

### ESM (ES Modules)
- **Definition**: ECMAScript Modules, the standard layout format for packaging JavaScript code for reuse.

### PII (Personally Identifiable Information)
- **Definition**: Any data that could potentially identify a specific individual. Guarded carefully as noted in [BUSINESS_RULES.md](BUSINESS_RULES.md).

---

## 🔍 Common Abbreviations

| Abbreviation | Expanded Form | Context |
| :--- | :--- | :--- |
| **Auth** | Authentication / Authorization | User access layers |
| **E2E** | End-to-End | Testing pipeline |
| **SDK** | Software Development Kit | Tooling libraries |


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "REFACTOR_RULES.md.hbs": "# Refactoring & Code Quality — my-nextjs-app
*Generated 2025-01-01 — v1.0.0-test*
This guide sets quality rules for clean coding, codebase maintenance, and deprecation protocols in the **my-nextjs-app** repository.

---

## 📐 Quality Standards

- **Single Responsibility Principle**: A file should do one thing. If a component grows past 200 lines, extract helper functions or subcomponents.
- **Strict Typing**: Avoid \`any\` declarations. Use detailed interface structures or utility types.

---

## 🛠️ Refactoring Trigger Checklist

Refactor modules when you encounter these code smells:

| Smell | Detection Criteria | Remedy |
| :--- | :--- | :--- |
| **Deep Nesting** | If statement nesting goes past 3 levels. | Guard clauses / early returns. |
| **Duplicate Logic** | Similar logic exists in 3 or more files. | Extract to custom hooks or helper modules. |
| **Fragile Functions** | Functions requiring multiple parameter adjustments. | Object parameters / option config payloads. |

---

## ⚠️ Deprecation Protocol

> [!CAUTION]
> Avoid making breaking changes directly on active branches:
> 1. **Mark as Deprecated**: Use JSDoc \`@deprecated\` tag to flag methods.
> 2. **Add Warn logs**: Output runtime console warnings when invoked in development.
> 3. **Schedule Removal**: Set a future milestone version to purge obsolete methods.


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
  "UI_PATTERNS.md.hbs": "# UI Patterns & Styling Conventions — my-nextjs-app
*Generated 2025-01-01 — v1.0.0-test*
This document details the interface standards, component rules, design system choices, and styling conventions for **my-nextjs-app**.

---

## 🎨 Theme & Palette System

We target a premium visual identity:
- **Default**: Slate/Zinc scale with primary indigo accents.
- **Color Format**: Use HSL color declarations to simplify opacity adjustments and variations:
  - \`--primary\`: \`hsl(240, 5.9%, 10%)\`
  - \`--accent\`: \`hsl(263.4, 70%, 50.4%)\`
  - \`--background\`: \`hsl(0, 0%, 100%)\`

---

## 🧱 Component Layout Rules

- **Design Philosophy**: Use responsive, mobile-first design approaches.
- **Interactive States**: Every clickable component MUST have styling for:
  - \`:hover\` — slight scale-up (e.g. \`scale-102\`) or opacity adjustment.
  - \`:focus-visible\` — clean focus rings for accessibility.
  - \`:disabled\` — grayed out options, and \`cursor: not-allowed\`.

---

## 🌟 Modern Design Features

> [!TIP]
> ### Glassmorphism & Backdrop Filters
> Use modern CSS to build premium panel containers:
> \`\`\`css
> .glass-panel {
>   background: rgba(255, 255, 255, 0.7);
>   backdrop-filter: blur(10px);
>   border: 1px solid rgba(255, 255, 255, 0.2);
> }
> \`\`\`
>
> ### Accessibility Checklist
> - Ensure all images have descriptive \`alt\` tags.
> - Contrast ratios should adhere to WCAG AA standards (minimum 4.5:1 for standard text).


---
*Documentation generated by [create-agent-docs](https://github.com/anomalyco/create-agent-docs) v1.0.0-test on 2025-01-01.*
",
}
`;
